--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ cache: packages
 branches:
     only:
         - master
+r_packages:
+    - ggplot2
+    - leaflet
+    - DT
 r_github_packages:
     - rstudio/blogdown
     - yihui/xaringan
